<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/user_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/cover"
            android:scaleType="fitXY"
            app:layout_constraintRight_toLeftOf="@+id/title"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="20dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/user_name"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/githublink1"
            android:text="@string/github_profile_link"
            android:visibility="invisible"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            tools:layout_constraintBottom_creator="1"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginBottom="8dp"
            app:layout_constraintLeft_toRightOf="@+id/cover"
            android:layout_marginLeft="20dp" />


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>